@@ -274,6 +274,7 @@ Release 0.21.0 - Unreleased
    HBASE-1956  Export HDFS read and write latency as a metric
    HBASE-2080  [EC2] Support multivolume local instance storage
    HBASE-2083  [EC2] HDFS DataNode no longer required on master
+   HBASE-2084  [EC2] JAVA_HOME handling broken
    HBASE-2036  Use Configuration instead of HBaseConfiguration (Enis Soztutar via Stack)
 
   NEW FEATURES
